add nozzle diameter to preset names

--- a/print/0.20 mm (0.4 mm nozzle).ini
+++ b/print/0.20 mm (0.4 mm nozzle).ini
@@ -55,7 +55,7 @@ infill_first = 0
 infill_only_where_needed = 0
 infill_overlap = 25%
 infill_speed = 50
-inherits = 0.20mm NORMAL @CREALITY
+inherits = 0.20 mm NORMAL (0.4 mm nozzle) @CREALITY
 interface_shells = 0
 ironing = 0
 ironing_flowrate = 15%
