--- a/printer/Ender 3 Pro (0.6 mm nozzle).ini
+++ b/printer/Ender 3 Pro (0.6 mm nozzle).ini
@@ -14,7 +14,7 @@ end_gcode = {if max_layer_z < max_print_height}G1 Z{z_offset+min(max_layer_z+2, 
 extra_loading_move = -2
 extruder_colour = #FCE94F
 extruder_offset = 0x0
-gcode_flavor = marlin
+gcode_flavor = klipper
 high_current_on_filament_swap = 0
 host_type = octoprint
 inherits = Creality Ender-3 BLTouch (0.6 mm nozzle)
