--- a/printer/Ender 3 Pro (0.6 mm nozzle).ini
+++ b/printer/Ender 3 Pro (0.6 mm nozzle).ini
@@ -19,7 +19,7 @@ high_current_on_filament_swap = 0
 host_type = octoprint
 inherits = Creality Ender-3 BLTouch (0.6 mm nozzle)
 layer_gcode = ;AFTER_LAYER_CHANGE\n;{layer_z}
-machine_limits_usage = emit_to_gcode
+machine_limits_usage = time_estimate_only
 machine_max_acceleration_e = 5000
 machine_max_acceleration_extruding = 500
 machine_max_acceleration_retracting = 1000
